Trying to fix overlap of speakers on home page

--- a/app/assets/stylesheets/_speakers.sass
+++ b/app/assets/stylesheets/_speakers.sass
@@ -15,7 +15,7 @@
   padding-top: 60px
   padding-bottom: 30px
   border-radius: 10px
-  height: 435px
+  height: 475px
 
   &:hover
     background-color: $orange
